# CE_OFDM_signal_correction

./: .gitignore  1run.cmd  CMakeLists.txt  README.md  build.mk  makefile  makefile_build.mk  run.sh  run_dev_test.sh  run_fast_test.cmd  run_visual.cmd  visual_signal.py
Reports/: .~lock.Доклад_2.odp#  Доклад.odp  Доклад_2.odp
backup/: channel_model.cpp  config_parse.cpp  device_ad9361.cpp  device_ad9361_v1.cpp  main.cpp  ofdm_modulation copy 3.cpp  ofdm_modulation copy 4.cpp  ofdm_modulation copy.cpp  ofdm_modulation5.cpp  signal_processing.cpp
configs/: config.txt  config.yaml  config1.txt  config_bss.yaml  config_d.txt  config_monitor.yaml  config_recv.yaml  config_tx.txt  config_ue.yaml  configuration_template.txt
configs_v1.0/: config1.txt  config_d.txt
data/: data_bit.txt  data_test.txt  ser.txt
data/ofdm_model_add_noise/: config.txt  data_test.txt
data/ofdm_signal_correction/: bers.txt  bers_qam16.txt
data/practic5/: ber_soft.txt
data/practice5/: ber_soft.txt
data/samples/: rx_0  rx_1  rx_10  rx_11  rx_12  rx_13  rx_14  rx_15  rx_16  rx_17  rx_18  rx_19  rx_2  rx_20  rx_21  rx_22  rx_23  rx_24  rx_25  rx_3  rx_4  rx_5  rx_6  rx_7  rx_8  rx_9
lib/include/: complex_container.hpp  output.hpp  signal_processing.hpp
lib/src/complex_container/: CMakeLists.txt  complex_container.cpp
lib/src/configure/: CMakeLists.txt  configure.cpp  create_file_read_cfg.py
lib/src/output/: CMakeLists.txt  output.cpp
lib/src/signal_processing/: CMakeLists.txt  cfo_correct.cpp  cfo_correct.hpp  debug.cpp  debug.hpp  modulation.cpp  modulation.hpp  ofdm_modulation.cpp  ofdm_modulation.hpp  types.hpp
res/: data.txt  data_bin.txt
src/: api.hpp  config_parse.cpp  config_parse.hpp  header.hpp  main copy.cpp  main.cpp  target.cpp  target.hpp
src/bss_ue/: bss.cpp  channel_model.cpp  channel_model.hpp  components.cpp  components.hpp  monitor.cpp  ofdm.cpp  ofdm.hpp  receiver_channel.cpp  service.hpp  ue.cpp
src/configure/: config_parse.cpp  config_parse.hpp
src/generate_packet/: generate_packet.cpp  generate_packet.h  generate_packet.hpp  generate_packet_static.cpp  generate_packet_static.h  makefile
src/graphical_display/: ipc_data.py  model_channel.py  rw_data.py  view_data.py  visual_signal.py
src/ipc/: managment_ipc.cpp  managment_ipc.hpp
src/loaders/: load_data.cpp  load_data.hpp
src/model/: modelling.cpp  modelling.hpp
src/phy/: cfo_correct.cpp  cfo_correct.hpp  modulation.cpp  modulation.hpp  ofdm_modulation copy 2.cpp  ofdm_modulation copy 3.cpp  ofdm_modulation copy.cpp  ofdm_modulation.cpp  ofdm_modulation.hpp  phy.cpp  phy.hpp  signal_processing.cpp  signal_processing.hpp  types.cpp  types.hpp
src/test_components/: test_components.cpp  test_components.hpp
src/trx/: debug_trx.cpp  debug_trx.hpp  device_api.cpp  device_api.hpp  device_buffer.cpp  device_buffer.hpp  ofdm.cpp  ofdm.hpp  receiver_ofdm.cpp  receiver_ofdm.hpp  ring_buffer.cpp  ring_buffer.hpp  rx.cpp  tx.cpp  types_trx.hpp
src/trx/ad9361/: device_ad9361.cpp  device_ad9361.hpp
test/: cfe.py  cfo_est.m  interp  interp copy.cpp  interp.cpp  load_yaml  load_yaml.cpp  py_complex.py  run.sh  shared_memory  shared_memory.cpp  shared_memory.py  test1.py  test2.py  test3.py  test_noise.py  test_number  test_number.cpp  test_ring_buffer  test_ring_buffer.cpp  test_vector  test_vector.cpp
test/test_libs/: CMakeLists.txt  lib  main.cpp  run.sh
